# bb13

./: API_ENDPOINTS_DOCUMENTATION.md  README.md  VPS_SETUP.txt  event-log.txt  pyproject.toml  replit.md  requirements.txt  systemd.service.example
bot/: __init__.py  __main__.py  config.py  database.py  models.py
bot/modules/: __init__.py  decorators.py  static.py  telegram.py
bot/plugins/: __init__.py  callback.py  commands.py  deeplinks.py  files.py
bot/server/: __init__.py  ad_api.py  admin.py  auth.py  error.py  main.py  publisher.py
bot/server/templates/: admin_ad_networks.html  admin_base.html  admin_dashboard.html  admin_publisher_files.html  admin_publishers.html  admin_settings.html  admin_withdrawals.html  api_management.html  index.html  login.html  play.html  privacy.html  publisher_base.html  publisher_dashboard.html  publisher_upload.html  publisher_videos.html  publisher_withdraw.html  register.html  upload.html
